--- a/templates/trade-info.html
+++ b/templates/trade-info.html
@@ -26,6 +26,10 @@
                 <span class="all hidden">Выбраны все 103</span>
                 <span class="question hidden"><a href="#" title="Нажмите здесь, чтобы выбрать объекты на всех страницах">Выбрать все Трейдинг (103)</a></span>
                 <span class="clear hidden"><a href="#">Снять выделение</a></span>
+                <span>|</span>
+                <span>Total profit</span>
+                <span>--</span>
+                <span><strong>{{ total_profit }}</strong></span>
               </div>
               <div class="results">
                 <table id="result_list">
