--- a/templates/user-info.html
+++ b/templates/user-info.html
@@ -11,6 +11,7 @@
     <div id="content" class="colM">
       <h1>Изменить пользователь</h1>
       <h2>{{ user.username }}</h2>
+      <h3>Total profit - - <strong>{{ total_profit }}</strong></h3>
       <div id="content-main">
         <form method="post" action="/admin/users/user/update" id="user_form" novalidate>
           <input type="hidden" name="username" value="{{ user.username }}">
