modified and added docker

--- a/templates/users.html
+++ b/templates/users.html
@@ -49,7 +49,7 @@
                       <div class="text"><a>Количество торговли</a></div>
                     </th>
                     <th scope="col" class="sortable column-ban">
-                      <div class="text"><a>Ограничить доступ</a></div>
+                      <div class="text"><a>Доступ ограничено</a></div>
                     </th>
                   </tr>
                 </thead>
