--- a/templates/user-info.html
+++ b/templates/user-info.html
@@ -22,13 +22,21 @@
                   <div>
                     <div class="flex-container fieldBox field-first_name">
                       <label for="id_first_name">Имя:</label>
-                      <input type="text" name="first_name" class="vTextField" value="{{ user.first_name }}" maxlength="150" id="id_first_name">
+                      {% if user.first_name %}
+                        <input type="text" name="first_name" class="vTextField" value="{{ user.first_name }}" maxlength="150" id="id_first_name">
+                      {% else %}
+                        <input type="text" name="first_name" class="vTextField" value="" maxlength="150" id="id_first_name">
+                      {% endif %}
                     </div>
                   </div>
                   <div>
                     <div class="flex-container fieldBox field-last_name">
                       <label class="inline" for="id_last_name">Фамилия:</label>
-                      <input type="text" name="last_name" class="vTextField" value="{{ user.last_name }}" maxlength="150" id="id_last_name">
+                      {% if user.last_name %}
+                        <input type="text" name="last_name" class="vTextField" value="{{ user.last_name }}" maxlength="150" id="id_last_name">
+                      {% else %}
+                      <input type="text" name="last_name" class="vTextField" value="" maxlength="150" id="id_last_name">
+                      {% endif %}
                     </div>
                   </div>
                 </div>
@@ -39,13 +47,21 @@
                   <div>
                     <div class="flex-container fieldBox field-phone_number">
                       <label for="id_phone_number">Номер телефона:</label>
-                      <input type="text" name="phone_number" class="vTextField" value="{{ user.phone_number }}" maxlength="50" id="id_phone_number">
+                      {% if user.phone_number %}
+                        <input type="text" name="phone_number" class="vTextField" value="{{ user.phone_number }}" maxlength="50" id="id_phone_number">
+                        {% else %}
+                        <input type="text" name="phone_number" class="vTextField" value="" maxlength="50" id="id_phone_number">
+                      {% endif %}
                     </div>
                   </div>
                   <div>
                     <div class="flex-container fieldBox field-email">
                       <label class="inline" for="id_email">Адрес электронной почты:</label>
-                      <input type="email" name="email" class="vTextField" value="{{ user.email }}" maxlength="254" id="id_email">
+                      {% if user.email %}
+                        <input type="email" name="email" class="vTextField" value="{{ user.email }}" maxlength="254" id="id_email">
+                      {% else %}
+                        <input type="email" name="email" class="vTextField" value="" maxlength="254" id="id_email">
+                      {% endif %}
                     </div>
                   </div>
                 </div>
@@ -150,7 +166,11 @@
                 <div>
                   <div class="flex-container">
                     <label for="id_mexc_api_key">MEXC api ключ:</label>
-                    <input type="text" name="mexc_api_key" value="{{ user.mexc_api_key }}" class="vTextField" maxlength="255" id="id_mexc_api_key">
+                    {% if user.mexc_api_key %}
+                      <input type="text" name="mexc_api_key" value="{{ user.mexc_api_key }}" class="vTextField" maxlength="255" id="id_mexc_api_key">
+                    {% else %}
+                      <input type="text" name="mexc_api_key" value="" class="vTextField" maxlength="255" id="id_mexc_api_key">
+                    {% endif %}
                   </div>
                 </div>
               </div>
@@ -158,7 +178,11 @@
                 <div>
                   <div class="flex-container">
                     <label for="id_mexc_secret_key">MEXC секретный ключ:</label>
+                    {% if user.mexc_secret_key %}
                       <input type="text" name="mexc_secret_key" value="{{ user.mexc_secret_key }}" class="vTextField" maxlength="255" id="id_mexc_secret_key">
+                    {% else %}
+                      <input type="text" name="mexc_secret_key" value="" class="vTextField" maxlength="255" id="id_mexc_secret_key">
+                    {% endif %}
                   </div>
                 </div>
               </div>
