--- a/templates/change-err-msg.html
+++ b/templates/change-err-msg.html
@@ -27,7 +27,7 @@
               </fieldset>
               <div class="submit-row">
                 <input type="submit" value="Сохранить" class="default" name="_save">
-                <a href="#" class="deletelink">Удалить</a>
+                <a href="/admin/errors/delete/{{ err_msg.id }}" class="deletelink">Удалить</a>
               </div>
             </div>
           </form>
