--- a/templates/user-info.html
+++ b/templates/user-info.html
@@ -14,7 +14,7 @@
       <h3>Total profit - - <strong>{{ total_profit }}</strong></h3>
       <div id="content-main">
         <form method="post" action="/admin/users/user/update" id="user_form" novalidate>
-          <input type="hidden" name="username" value="{{ user.username }}">
+          <input type="hidden" name="user_id" value="{{ user.id }}">
           <div>
             <fieldset class="module aligned ">
               <div class="form-row field-first_name field-last_name">
@@ -66,7 +66,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="form-row field-username">
                 <div>
                   <div class="flex-container">
@@ -75,7 +74,71 @@
                   </div>
                 </div>
               </div>
-              <div class="form-row field-ban field-for_free field-auto_trade">
+              <div class="form-row field-trade_usdt_quantity field-trade_percent">
+                <div class="flex-container form-multiline">
+                  <div>
+                    <div class="flex-container fieldBox field-trade_usdt_quantity">
+                      <label class="inline" for="id_trade_usdt_quantity" style="width: 130px;">Кол. для торговли:</label>
+                      <input type="number" name="trade_quantity" value="{{ user.trade_quantity }}" class="vIntegerField" required id="id_trade_usdt_quantity" style="width: 50px;">
+                    </div>
+                  </div>
+                  <div>
+                    <div class="flex-container fieldBox field-trade_percent">
+                      <label class="inline" for="id_trade_percent" style="width: 130px;">Процент торговли:</label>
+                      <input type="number" name="trade_percent" value="{{ user.trade_percent }}" step="any" required id="id_trade_percent" style="width: 50px;">
+                    </div>
+                  </div>
+                  <div>
+                    <div class="flex-container fieldBox field-trade_percent">
+                      <label class="inline" for="id_trade_percent"style="width: 140px;">Валюта для торговли:</label>
+                      <input type="text" name="symbol_to_trade" value="{{ user.symbol_to_trade }}" step="any" required id="id_trade_percent" style="width: 80px;">
+                    </div>
+                  </div>
+                  <div>
+                    <div class="flex-container field-trade_percent" style="margin-right: 30px;">
+                      <label class="inline" for="id_trade_percent" style="width: 90px;">Авто торговля:</label>
+                      {% if user.auto_trade %}
+                        <input type="checkbox" name="auto_trade" id="id_auto_trade" checked>
+                      {% else %}
+                        <input type="checkbox" name="auto_trade" id="id_auto_trade">
+                      {% endif %}
+                    </div>
+                  </div>
+                </div>
+
+                <div class="flex-container form-multiline">
+                  <div>
+                    <div class="flex-container fieldBox field-trade_usdt_quantity">
+                      <label class="inline" for="id_trade_usdt_quantity" style="width: 130px;">процент падении 1:</label>
+                      <input type="number" name="bif_percent_1" value="{{ user.bif_percent_1 }}" class="vIntegerField" required id="id_trade_percent" style="width: 50px;">
+                    </div>
+                  </div>
+                  <div>
+                    <div class="flex-container fieldBox field-trade_percent">
+                      <label class="inline" for="id_trade_percent" style="width: 130px;">процент падении 2:</label>
+                      <input type="number" name="bif_percent_2" value="{{ user.bif_percent_2 }}" step="any" required id="id_trade_percent" style="width: 50px;">
+                    </div>
+                  </div>
+                  <div>
+                    <div class="flex-container fieldBox field-trade_percent">
+                      <label class="inline" for="id_trade_percent"style="width: 140px;">процент падении 3:</label>
+                      <input type="number" name="bif_percent_3" value="{{ user.bif_percent_3 }}" class="vIntegerField" required id="id_trade_percent" style="width: 50px;">
+                    </div>
+                  </div>
+                  <div>
+                    <div class="flex-container field-trade_percent">
+                      <label class="inline" for="id_trade_percent" style="width: 140px;">Покупка при падении:</label>
+                      {% if user.bif_is_active %}
+                        <input type="checkbox" name="bif_is_active" id="id_auto_trade" checked>
+                      {% else %}
+                        <input type="checkbox" name="bif_is_active" id="id_auto_trade">
+                      {% endif %}
+                    </div>
+                  </div>
+                </div>
+
+              </div>
+            <div class="form-row field-ban field-for_free field-auto_trade">
                 <div class="flex-container form-multiline">
                   <div>
                     <div class="flex-container fieldBox field-ban">
@@ -95,38 +158,6 @@
                         <input type="checkbox" name="for_free" id="id_for_free">
                       {% endif %}
                       <label class="vCheckboxLabel inline" for="id_for_free">Бесплатная подписка</label>
-                    </div>
-                  </div>
-                  <div>
-                    <div class="flex-container fieldBox field-auto_trade">
-                      {% if user.auto_trade %}
-                        <input type="checkbox" name="auto_trade" id="id_auto_trade" checked>
-                      {% else %}
-                        <input type="checkbox" name="auto_trade" id="id_auto_trade">
-                      {% endif %}
-                      <label class="vCheckboxLabel inline" for="id_auto_trade">Авто торговля</label>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="form-row field-trade_usdt_quantity field-trade_percent">
-                <div class="flex-container form-multiline">
-                  <div>
-                    <div class="flex-container fieldBox field-trade_usdt_quantity">
-                      <label class="required" for="id_trade_usdt_quantity">USDT для торговли:</label>
-                      <input type="number" name="trade_quantity" value="{{ user.trade_quantity }}" class="vIntegerField" required id="id_trade_usdt_quantity">
-                    </div>
-                  </div>
-                  <div>
-                    <div class="flex-container fieldBox field-trade_percent">
-                      <label class="required inline" for="id_trade_percent">Процент торговли:</label>
-                      <input type="number" name="trade_percent" value="{{ user.trade_percent }}" step="any" required id="id_trade_percent">
-                    </div>
-                  </div>
-                  <div>
-                    <div class="flex-container fieldBox field-trade_percent">
-                      <label class="required inline" for="id_trade_percent">Валюта для торговли</label>
-                      <input type="text" name="symbol_to_trade" value="{{ user.symbol_to_trade }}" step="any" required id="id_trade_percent">
                     </div>
                   </div>
                 </div>
@@ -233,15 +264,15 @@
                     <tbody>
                       {% for trade in trades %}
                         <tr class="form-row has_original" id="tradeinfo_set-0">
-                          <td class="original"></td>
-                          <td class="field-symbol"><p>{{ trade.symbol }}</p></td>
-                          <td class="field-buy_kaspa_quantity"><p>{{ trade.buy_quantity }}</p></td>
-                          <td class="field-cummulative_quote_qty"><p>{{ trade.cummulative_qoute_qty }}</p></td>
-                          <td class="field-buy_price"><p>{{ trade.buy_price }}</p></td>
-                          <td class="field-sell_price"><p>{{ trade.sell_price }}</p></td>
-                          <td class="field-profit"><p>{{ trade.profit }}</p></td>
-                          <td class="field-status"><p>{{ trade.status }}</p></td>
-                          <td class="field-date_time"><p>{{ trade.date_time.strftime('%d %B %Y г. %H:%M') }}</p></td>
+                          <td class="original" style="padding-top: unset;"></td>
+                          <td class="field-symbol" style="padding-top: unset;"><p>{{ trade.symbol }}</p></td>
+                          <td class="field-buy_kaspa_quantity" style="padding-top: unset;"><p>{{ trade.buy_quantity }}</p></td>
+                          <td class="field-cummulative_quote_qty" style="padding-top: unset;"><p>{{ trade.cummulative_qoute_qty }}</p></td>
+                          <td class="field-buy_price" style="padding-top: unset;"><p>{{ trade.buy_price }}</p></td>
+                          <td class="field-sell_price" style="padding-top: unset;"><p>{{ trade.sell_price }}</p></td>
+                          <td class="field-profit" style="padding-top: unset;"><p>{{ trade.profit }}</p></td>
+                          <td class="field-status" style="padding-top: unset;"><p>{{ trade.status }}</p></td>
+                          <td class="field-date_time" style="padding-top: unset;"><p>{{ trade.date_time.strftime('%d %B %Y г. %H:%M') }}</p></td>
                         </tr>
                       {% endfor %}
                     </tbody>
