--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -10,7 +10,7 @@
         <td><a href="#" class="addlink">Добавить</a></td>
       </tr>
       <tr class="model-tradeinfo">
-        <th scope="row"><a href="/admin/trade-info">Трейдинг</a></th>
+        <th scope="row"><a href="/admin/trade">Трейдинг</a></th>
         <td><a href="#" class="addlink">Добавить</a></td>
       </tr>
     </table>
