--- a/templates/user-info.html
+++ b/templates/user-info.html
@@ -284,7 +284,7 @@
             </div>
             <div class="submit-row">
               <input type="submit" value="Сохранить" class="default" name="_save">
-              <!-- <a href="/admin/users/user/delete/{{ user.username}}" class="deletelink">Удалить</a> -->
+              <a href="/admin/users/user/delete/{{ user.id}}" class="deletelink">Удалить</a>
             </div>
           </div>
         </form>
