--- a/templates/trade-change.html
+++ b/templates/trade-change.html
@@ -99,7 +99,7 @@
             </fieldset>
             <div class="submit-row">
               <input type="submit" value="Сохранить" class="default" name="_save">
-              <a href="/admin/trade-info/delete/{{ trade.id }}" class="deletelink">Удалить</a>
+              <a href="/admin/trade/delete/{{ trade.id }}" class="deletelink">Удалить</a>
             </div>
           </div>
         </form>
