--- a/templates/user-info.html
+++ b/templates/user-info.html
@@ -137,6 +137,27 @@
                   </div>
                 </div>
 
+                <div class="flex-container form-multiline">
+                  <div>
+                    <div class="flex-container fieldBox field-trade_usdt_quantity">
+                      <label class="inline" for="id_trade_usdt_quantity" style="width: 130px;">Цена 1:</label>
+                      <input type="number" name="bif_price_1" value="{{ user.bif_price_1 }}" class="vIntegerField" required id="id_trade_percent" style="width: 90px;">
+                    </div>
+                  </div>
+                  <div>
+                    <div class="flex-container fieldBox field-trade_percent">
+                      <label class="inline" for="id_trade_percent" style="width: 90px;">Цена 2:</label>
+                      <input type="number" name="bif_price_2" value="{{ user.bif_price_2 }}" step="any" required id="id_trade_percent" style="width: 90px;">
+                    </div>
+                  </div>
+                  <div>
+                    <div class="flex-container fieldBox field-trade_percent">
+                      <label class="inline" for="id_trade_percent"style="width: 100px;">Цена 3:</label>
+                      <input type="number" name="bif_price_3" value="{{ user.bif_price_3 }}" class="vIntegerField" required id="id_trade_percent" style="width: 90px;">
+                    </div>
+                  </div>
+                </div>
+
               </div>
             <div class="form-row field-ban field-for_free field-auto_trade">
                 <div class="flex-container form-multiline">
