--- a/templates/user-info.html
+++ b/templates/user-info.html
@@ -158,6 +158,39 @@
                   </div>
                 </div>
 
+                <div class="flex-container form-multiline">
+                  <div>
+                    <div class="flex-container fieldBox field-trade_usdt_quantity">
+                      <label class="inline" for="id_trade_usdt_quantity" style="width: 130px;">Куплено 1:</label>
+                      {% if user.bif_buy_1 %}
+                        <input type="checkbox" name="bif_buy_1" id="id_auto_trade" style="margin-right: 80px;" checked>
+                      {% else %}
+                        <input type="checkbox" name="bif_buy_1" id="id_auto_trade" style="margin-right: 80px;">
+                      {% endif %}
+                    </div>
+                  </div>
+                  <div>
+                    <div class="flex-container fieldBox field-trade_percent">
+                      <label class="inline" for="id_trade_percent" style="width: 100px;">Куплено 2:</label>
+                      {% if user.bif_buy_2 %}
+                        <input type="checkbox" name="bif_buy_2" id="id_auto_trade" style="margin-right: 80px;" checked>
+                      {% else %}
+                        <input type="checkbox" name="bif_buy_2" id="id_auto_trade" style="margin-right: 80px;">
+                      {% endif %}
+                    </div>
+                  </div>
+                  <div>
+                    <div class="flex-container fieldBox field-trade_percent">
+                      <label class="inline" for="id_trade_percent"style="width: 110px;">Куплено 3:</label>
+                      {% if user.bif_buy_3 %}
+                        <input type="checkbox" name="bif_buy_3" id="id_auto_trade" checked>
+                      {% else %}
+                        <input type="checkbox" name="bif_buy_3" id="id_auto_trade">
+                      {% endif %}
+                    </div>
+                  </div>
+                </div>
+
               </div>
             <div class="form-row field-ban field-for_free field-auto_trade">
                 <div class="flex-container form-multiline">
